--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="myBar"></div>
     </div>
     <span>
-        <h1 class="lv">Made with ❤️ by <a href="mailto:trksb3@gmail.com" style="text-decoration:none;"><span
+        <h1 class="lv">Made with ❤️ by <a href="mailto:trksb@mypomodoro.tech" style="text-decoration:none;"><span
                     style="color: greenyellow;">Tarek Alsibai</span></a></h1>
     </span>
     <div class="clock">
