--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div class="motivdiv">
     <h1 id="motiveh">Press start when you are ready</h1>
   </div>
-  <h1 class="lv"><a href="https://www.4kdownload.com/products/product-videodownloader"
+  <h1 class="lv"><a href="./ad.html"
       style="text-decoration:none;"><span style="color: rgb(255, 22, 22);">Free YT videos downloader</span></a></h1>
   <script src="./app.js" type="text/javascript"></script>
   </div>
