--- a/ad/ad.html
+++ b/ad/ad.html
@@ -36,7 +36,7 @@
       4. Bypass geo-restrictions and watch videos that were blocked in your region
 
     </div>
-    <h1><a href="https://www.4kdownload.com/products/product-videodownloader" style="text-decoration:none;"><span
+    <h1><a href="https://bit.ly/2UcQ7BL" style="text-decoration:none;"><span
           style="color: rgb(22, 255, 34);">Download it</span></a></h1>
   </div>
 </body>
