--- a/ad.html
+++ b/ad.html
@@ -21,20 +21,25 @@
     <h2>Main features</h2>
 
     <div class="features">
-      1. Download private YouTube videos and playlists you’ve got access to
+      1. Auto download videos from subscribed youtube channels.
+      <br>
+2. Smart mode feature to auto-apply preferable settings to all future downloads.
 <br>
+3. Allows downloading 3D videos and 360°/virtual reality videos.
 <br>
-      2. Save video and audio from YouTube, Vimeo, TikTok, SoundCloud, Facebook, Instagram, DailyMotion and Likee
-
-
-      <br>
-      <br>
-      3. Get a one of a kind experience by watching stereoscopic 3D videos on your computer or TV
-      <br>
-      <br>
-
-      4. Bypass geo-restrictions and watch videos that were blocked in your region
-
+4. In-app proxy setup to bypass geo-restrictions.
+<br>
+5. Extract annotations and subtitles along with videos. Select from over 50 languages.
+<br>
+6. Get videos in 4K quality, in fact, up to 8K quality.
+<br>
+7. Download full playlists and channels from YouTube in one go.
+<br>
+8. Private YouTube content download.
+<br>
+9. Allows you to download age-restricted videos, your Watch Later and Liked playlists, and other private content.
+<br>
+10. Allows downloading embedded YouTube videos from any website.
     </div>
     <h1><a href="https://bit.ly/2UcQ7BL" style="text-decoration:none;"><span
           style="color: rgb(22, 255, 34);">Download it</span></a></h1>
