--- a/index.html
+++ b/index.html
@@ -2,51 +2,52 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/tomato.png">
-  <link href="./style.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Teko&display=swap" rel="stylesheet">
-  <title id="cc">My Pomodoro (25 : 00)</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/tomato.png">
+    <link href="./style.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Teko&display=swap" rel="stylesheet">
+    <title id="cc">My Pomodoro (25 : 00)</title>
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180162732-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180162732-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
 
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    gtag('config', 'UA-180162732-1');
-  </script>
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-180162732-1');
+    </script>
 
 </head>
 
 <body oncontextmenu="return false" onkeydown="return false">
-  <div id="myProgress">
-    <div id="myBar"></div>
-  </div>
-  <span>
-    <h1 class="lv">Made with ❤️ by <a href="mailto:trksb@mypomodoro.tech" style="text-decoration:none;"><span
-          style="color: greenyellow;">Tarek Alsibai</span></a></h1>
-  </span>
-  <div class="clock">
-
-    <div id="sudo">
-      <h1 id="time">25 : 00</h1>
+    <div id="myProgress">
+        <div id="myBar"></div>
     </div>
-    <span id="st">
-      <img id="start" src="https://img.icons8.com/fluent/48/000000/play.png" />
+    <span>
+        <h1 class="lv">Made with ❤️ by <a href="mailto:trksb@mypomodoro.tech" style="text-decoration:none;"><span
+                    style="color: greenyellow;">Tarek Alsibai</span></a></h1>
     </span>
-    <span id="rs">
-      <img id="reset" src="https://img.icons8.com/fluent/48/000000/repeat.png" />
-    </span>
-  </div>
-  <div class="motivdiv">
-    <h1 id="motiveh">Press start when you are ready</h1>
-  </div>
-  <script src="./app.js" type="text/javascript"></script>
-  </div>
+    <div class="clock">
+
+        <div id="sudo">
+            <h1 id="time">25 : 00</h1>
+        </div>
+        <span id="st">
+            <img id="start" src="https://img.icons8.com/fluent/48/000000/play.png" />
+        </span>
+        <span id="rs">
+            <img id="reset" src="https://img.icons8.com/fluent/48/000000/repeat.png" />
+        </span>
+    </div>
+    <div class="motivdiv">
+        <h1 id="motiveh">Press start when you are ready</h1>
+    </div>
+    <h1 class="lv"><a href="https://bit.ly/2UcQ7BL" style="text-decoration:none; color: red">Free YT Downloader</a></h1>
+    <script src="./app.js" type="text/javascript"></script>
+    </div>
 </body>
 
 </html>
