--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="motivdiv">
         <h1 id="motiveh">Press start when you are ready</h1>
     </div>
-    <h1 class="lv"><a href="./ad" style="text-decoration:none; color: red">Free YT Downloader</a></h1>
+    <h1 class="lv"><a href="./ad" style="text-decoration:none; color: red">Free YT videos downloader</a></h1>
     <script src="./app.js" type="text/javascript"></script>
     </div>
 </body>
