--- a/index.html
+++ b/index.html
@@ -9,16 +9,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Teko&display=swap" rel="stylesheet">
     <title id="cc">My Pomodoro (25 : 00)</title>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180162732-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H5RBM3WLCY"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-        gtag('config', 'UA-180162732-1');
-    </script>
+  gtag('config', 'G-H5RBM3WLCY');
+</script>
 
 </head>
 
