--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <title id="cc">My Pomodoro (25 : 00)</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-H5RBM3WLCY"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BCP61C7L24"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-H5RBM3WLCY');
+  gtag('config', 'G-BCP61C7L24');
 </script>
 
 </head>
