--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     </div>
     <h1 class="lv"><a href="./ad" style="text-decoration:none; color: red">Free YT videos downloader</a></h1>
     <script src="./app.js" type="text/javascript"></script>
+    <h1 class="lv"><a href="https://github.com/trksb/mypomodoro.github.io" style="text-decoration:none; color: green">Contribute here</a></h1>
+    <script src="./app.js" type="text/javascript"></script>
     </div>
 </body>
 
