--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </span>
     </div>
     <div class="motivdiv">
-        <h1 id="motiveh">Press start when you are ready</h1>
+        <h1 id="motiveh">Get motivated every time u finish a Pomodoro</h1>
     </div>
     <h1 class="lv"><a href="./ad" style="text-decoration:none; color: red">Free YT videos downloader</a></h1>
     <script src="./app.js" type="text/javascript"></script>
