--- a/index.html
+++ b/index.html
@@ -2,54 +2,56 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-BCP61C7L24"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BCP61C7L24"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'G-BCP61C7L24');
-</script>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/tomato.png">
-    <link href="./style.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Teko&display=swap" rel="stylesheet">
-    <title id="cc">My Pomodoro (25 : 00)</title>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
 
-    
-
+    gtag('config', 'G-BCP61C7L24');
+  </script>
+  <meta name="description" content="Simple website to do the Pomodoro technique">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/tomato.png">
+  <link href="./style.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Teko&display=swap" rel="stylesheet">
+  <title id="cc">My Pomodoro</title>
 </head>
 
 <body oncontextmenu="return false" onkeydown="return false">
-    <div id="myProgress">
-        <div id="myBar"></div>
-    </div>
-    <span>
-        <h1 class="lv">Made with ❤️ by <a href="mailto:trksb@mypomodoro.tech" style="text-decoration:none;"><span
-                    style="color: greenyellow;">Tarek Alsibai</span></a></h1>
-    </span>
-    <div class="clock">
+  <div id="myProgress">
+    <div id="myBar"></div>
+  </div>
+  <span>
+    <h1 class="lv">Made with ❤️ by <a href="mailto:trksb@mypomodoro.tech" style="text-decoration:none;"><span
+          style="color: greenyellow;">Tarek Alsibai</span></a></h1>
+  </span>
+  <div class="clock">
 
-        <div id="sudo">
-            <h1 id="time">25 : 00</h1>
-        </div>
-        <span id="st">
-            <img id="start" src="https://img.icons8.com/fluent/48/000000/play.png" />
-        </span>
-        <span id="rs">
-            <img id="reset" src="https://img.icons8.com/fluent/48/000000/repeat.png" />
-        </span>
+    <div id="sudo">
+      <h1 id="time">25 : 00</h1>
     </div>
-    <div class="motivdiv">
-        <h1 id="motiveh">Get motivated every time u finish a Pomodoro</h1>
-    </div>
-    <h1 class="lv"><a href="./ad" style="text-decoration:none; color: red">Free YT videos downloader</a></h1>
-    <script src="./app.js" type="text/javascript"></script>
-    <h1 class="lv1"><a href="https://github.com/trksb/mypomodoro.github.io" style="text-decoration:none; color: green">Contribute here</a></h1>
-    <script src="./app.js" type="text/javascript"></script>
-    </div>
+    <span id="st">
+      <img id="start" src="https://img.icons8.com/fluent/48/000000/play.png" />
+    </span>
+    <span id="rs">
+      <img id="reset" src="https://img.icons8.com/fluent/48/000000/repeat.png" />
+    </span>
+  </div>
+  <div class="motivdiv">
+    <h1 id="motiveh">Get motivated every time u finish a Pomodoro</h1>
+  </div>
+  <h1 class="lv"><a href="./ad" style="text-decoration:none; color: red">Free YT videos downloader</a></h1>
+  <script src="./app.js" type="text/javascript"></script>
+  <h1 class="lv1"><a href="https://github.com/trksb/mypomodoro.github.io"
+      style="text-decoration:none; color: green">Contribute here</a></h1>
+  <script src="./app.js" type="text/javascript"></script>
+  </div>
 </body>
 
 </html>
