--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     gtag('config', 'G-BCP61C7L24');
   </script>
-  <meta name="description" content="Simple website to do the Pomodoro technique">
+  <meta name="description" content="Simple website to do the Pomodoro technique 🍅">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/tomato.png">
