--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
   <meta name="description" content="Simple website to do the Pomodoro technique 🍅">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="My Pomodoro">
+  <meta property="og:description" content="Simple website to do the Pomodoro technique 🍅">
+  <meta property="og:site_name" content="Dude Perfect">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:description" content="Simple website to do the Pomodoro technique 🍅">
+  <meta name="twitter:title" content="My Pomodoro">
   <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/tomato.png">
   <link href="./style.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Teko&display=swap" rel="stylesheet">
