--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="My Pomodoro">
   <meta property="og:description" content="Simple website to do the Pomodoro technique 🍅">
-  <meta property="og:site_name" content="Dude Perfect">
+  <meta property="og:site_name" content="My Pomodoro">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:description" content="Simple website to do the Pomodoro technique 🍅">
   <meta name="twitter:title" content="My Pomodoro">
