--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mypomodoro.tech">
+  <meta name="keywords" content="pomodoro technique, tomato timer, pomodoro timer, online pomodoro timer, software timer, pomodoro software timer, productivity tools, gtd, getting things done, productivity, digital timer, concentration techniques, pomodoro resources, pomodoro software">
   <meta property="og:title" content="My Pomodoro">
   <meta property="og:description" content="Simple website to do the Pomodoro technique 🍅">
   <meta property="og:site_name" content="My Pomodoro">
