--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 
 <head>
-  <meta name="description" content="Simple website to do the Pomodoro technique">
+  <meta name="description" content="Simple website to do the Pomodoro technique 🍅">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
     content="pomodoro technique, tomato timer, pomodoro timer, online pomodoro timer, software timer, pomodoro software timer, productivity tools, gtd, getting things done, productivity, digital timer, concentration techniques, pomodoro resources, pomodoro software">
   <title id="cc">My Pomodoro</title>
   <!-- <meta property="og:title" content="My Pomodoro">
-  <meta property="og:description" content="Simple website to do the Pomodoro technique">
+  <meta property="og:description" content="Simple website to do the Pomodoro technique 🍅">
   <meta property="og:site_name" content="My Pomodoro">
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://mypomodoro.tech">
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:description" content="Simple website to do the Pomodoro technique">
+  <meta name="twitter:description" content="Simple website to do the Pomodoro technique 🍅">
   <meta name="twitter:title" content="My Pomodoro"> -->
   <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/tomato.png">
   <link href="./style.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Teko&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Teko:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BCP61C7L24"></script>
   <script>
