--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
   <meta name="twitter:title" content="My Pomodoro"> -->
   <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/tomato.png">
   <link href="./style.css" rel="stylesheet" type="text/css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Teko:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Chilanka&family=Teko&display=swap" rel="stylesheet">
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BCP61C7L24"></script>
   <script>
