--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="description" content="Simple website to do the Pomodoro technique">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keywords" content="pomodoro technique, tomato timer, pomodoro timer, online pomodoro timer, software timer, pomodoro software timer, productivity tools, gtd, getting things done, productivity, digital timer, concentration techniques, pomodoro resources, pomodoro software">
+  <meta name="keywords" content="pomodoro technique, tomato timer, pomodoro timer, online pomodoro timer, software timer, study, focus, pomodoro software timer, productivity tools, gtd, getting things done, productivity, digital timer, concentration techniques, pomodoro resources, pomodoro software">
   <title id="cc">My Pomodoro</title><!-- <meta property="og:title" content="My Pomodoro">
   <meta property="og:description" content="Simple website to do the Pomodoro technique">
   <meta property="og:site_name" content="My Pomodoro">
