--- a/index.html
+++ b/index.html
@@ -1,22 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta name="description" content="Simple website to do the Pomodoro technique" />
   <meta charset="UTF-8">
+  <title id="cc">My Pomodoro</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
     content="pomodoro technique, tomato timer, pomodoro timer, online pomodoro timer, software timer, study, focus, pomodoro software timer, productivity tools, gtd, getting things done, productivity, digital timer, concentration techniques, pomodoro resources, pomodoro software">
-  <title id="cc">My Pomodoro</title>
-  <!-- <meta property="og:title" content="My Pomodoro">
-  <meta property="og:description" content="Simple website to do the Pomodoro technique">
-  <meta property="og:site_name" content="My Pomodoro">
-  <meta property="og:locale" content="en_US">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://mypomodoro.tech">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:description" content="Simple website to do the Pomodoro technique">
-  <meta name="twitter:title" content="My Pomodoro"> -->
+  <meta name="description" content="Simple website to do the Pomodoro technique.">
   <link rel="shortcut icon" type="image/x-icon" href="https://img.icons8.com/color/96/000000/tomato.png">
   <link href="./style.css" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css2?family=Chilanka&amp;family=Teko&amp;display=swap" rel="stylesheet">
@@ -24,7 +14,6 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-BCP61C7L24"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-
     function gtag() {
       dataLayer.push(arguments);
     }
@@ -33,7 +22,6 @@
     gtag('config', 'G-BCP61C7L24');
   </script>
 </head>
-
 <body oncontextmenu="return false" onkeydown="return false">
   <div id="myProgress">
     <div id="myBar"></div>
@@ -55,5 +43,4 @@
       style="text-decoration:none; color: green">Contribute here</a></h1>
   <script src="./app.js" type="text/javascript"></script>
 </body>
-
 </html>
