--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Chilanka&amp;family=Teko&amp;display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Simple website to do the Pomodoro technique.">
-    <meta name="keywords" content="pomodoro technique, tomato timer, pomodoro timer, online pomodoro timer, software timer, study, focus, pomodoro software timer, productivity tools, gtd, getting things done, productivity, digital timer, concentration techniques, pomodoro resources, pomodoro software">
+    <meta name="keywords"
+        content="pomodoro technique, tomato timer, pomodoro timer, online pomodoro timer, software timer, study, focus, pomodoro software timer, productivity tools, gtd, getting things done, productivity, digital timer, concentration techniques, pomodoro resources, pomodoro software">
     <title id="cc">My Pomodoro</title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-BCP61C7L24"></script>
@@ -24,26 +25,31 @@
     </script>
 </head>
 
-<body oncontextmenu="return false" onkeydown="return false">
+<body>
     <div id="myProgress">
         <div id="myBar"></div>
     </div>
-    <h1 class="lv"><span>Made with ❤️ by <a href="mailto:trksb@mypomodoro.tech" style="text-decoration:none;"><span
-                    style="color: greenyellow;">Tarek Alsibai</span></a></span></h1>
-    <div class="clock">
-        <div id="sudo">
-            <h1 id="time">25 : 00</h1>
-        </div><span id="st"><img id="start" src="https://img.icons8.com/fluent/48/000000/play.png" alt="play"></span>
-        <span id="rs"><img id="reset" src="https://img.icons8.com/fluent/48/000000/repeat.png" alt="repeat"></span>
+    <div id="canvas"></div>
+        <h1 class="lv"><span>Made with ❤️ by <a href="mailto:trksb@mypomodoro.tech" style="text-decoration:none;"><span
+                        style="color: greenyellow;">Tarek Alsibai</span></a></span></h1>
+                        <!-- <input id="namw" type="text" placeholder="Enter something to bounce" style="height: 2em;"> -->
+        <div class="clock">
+            <div id="sudo">
+                <h1 id="time">25 : 00</h1>
+            </div><span id="st"><img id="start" src="https://img.icons8.com/fluent/48/000000/play.png"
+                    alt="play"></span>
+                    
+            <span id="rs"><img id="reset" src="https://img.icons8.com/fluent/48/000000/repeat.png" alt="repeat"></span>
+        </div>
+        <div class="motivdiv">
+            <h1 id="motiveh">Get motivated every time u finish a Pomodoro</h1>
+        </div>
+        <!-- <h1 class="lv"><a href="./ad" style="text-decoration:none; color: red">Free YT videos downloader</a></h1> -->
+        <script src="./app.js" type="text/javascript"></script>
+        <h1 class="lv1"><a href="https://github.com/trksb/mypomodoro.github.io"
+                style="text-decoration:none; color: green">Contribute here</a></h1>
+        <script src="./app.js" type="text/javascript"></script>
     </div>
-    <div class="motivdiv">
-        <h1 id="motiveh">Get motivated every time u finish a Pomodoro</h1>
-    </div>
-    <h1 class="lv"><a href="./ad" style="text-decoration:none; color: red">Free YT videos downloader</a></h1>
-    <script src="./app.js" type="text/javascript"></script>
-    <h1 class="lv1"><a href="https://github.com/trksb/mypomodoro.github.io"
-            style="text-decoration:none; color: green">Contribute here</a></h1>
-    <script src="./app.js" type="text/javascript"></script>
 </body>
 
 </html>
